file name change

--- a/AngularForm.html
+++ b/AngularForm.html
@@ -20,7 +20,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="header__logo">
-              <a href="new.html?redirect=true"><img src="logo.png"  style="border-radius:50%"></a>
+              <a href="index.html?redirect=true"><img src="logo.png"  style="border-radius:50%"></a>
             </div>
           </div>
           <div class="col-md-4">
