--- a/Flip Card Game/flip1.html
+++ b/Flip Card Game/flip1.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="header__logo">
-                        <a href="../new.html?redirect=true"><img src="../logo.png"></a>
+                        <a href="../index.html?redirect=true"><img src="../logo.png"></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
