--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="footer__text">
-                <a href="new.html"><img src="logo.png" style="border-radius:50%;"></a>
+                <a href="index.html"><img src="logo.png" style="border-radius:50%;"></a>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
               ut<br /> labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus
               commodo viverra<br /> maecenas accumsan lacus vel facilisis. </p>             
