--- a/recipes.html
+++ b/recipes.html
@@ -77,7 +77,7 @@ body{
                 <div class="row">
                     <div class="col-md-4">
                         <div class="header__logo">
-                            <a href="new.html?redirect=true"><img src="logo.png"></a>
+                            <a href="index.html?redirect=true"><img src="logo.png"></a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -217,7 +217,7 @@ body{
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="footer__text">
-                          <a href="new.html"><img src="logo.png" style="border-radius:50%"></a>
+                          <a href="index.html"><img src="logo.png" style="border-radius:50%"></a>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         ut<br /> labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus
                         commodo viverra<br /> maecenas accumsan lacus vel facilisis. </p>             
