--- a/AngularForm.html
+++ b/AngularForm.html
@@ -254,7 +254,7 @@
           </footer>
         </div>   
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-chart.js/1.0.2/angular-chart.min.js"></script>
-        <script src="http://code.angularjs.org/1.2.16/angular-resource.js"></script>
+        <script src="https://code.angularjs.org/1.2.16/angular-resource.js"></script>
         <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
         <script src="https://code.angularjs.org/1.2.0/angular-animate.min.js" ></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/3.0.0/toaster.min.js"></script>
