--- a/Flip Card Game/flip1.html
+++ b/Flip Card Game/flip1.html
@@ -159,6 +159,6 @@
             </div>
           </footer>
         <script src="flip1.js"></script>
-        <script src="http://code.angularjs.org/1.6.9/angular-animate.min.js"></script>
+        <script src="https://code.angularjs.org/1.6.9/angular-animate.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/2.1.0/toaster.js"></script>
     </body>
